@@ -1,3 +1,9 @@
+2019-03-24  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/71861
+	Backport from trunk
+	* gfortran.dg/interface_abstract_5.f90: New test case.
+
 2019-03-22  Backport from mainline
 
 	2019-03-22  Bill Schmidt  <wschmidt@linux.ibm.com>
